<resources>
    <string name="app_name">Sabthok</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_alerts">Alerts</string>
    <string name="action_my_ads">My Ads</string>
    <string name="action_profile">Profile</string>
    <string name="action_watchlist">Watchlist</string>
    <string name="action_feedback">Feedback</string>
    <string name="fab_action_1">Add to Watchlist</string>
    <string name="fab_action_2">Post a Need</string>
    <string name="fab_action_3">Post an Ad</string>
</resources>
