<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_my_ads" android:title="@string/action_my_ads" android:icon="@drawable/ic_ads"
        android:orderInCategory="96" app:showAsAction="always" />
    <item android:id="@+id/action_alerts" android:title="@string/action_alerts" android:icon="@drawable/ic_alerts"
        android:orderInCategory="97" app:showAsAction="always" />
    <item android:id="@+id/action_watchlist" android:title="@string/action_watchlist" android:icon="@drawable/ic_watchlist"
        android:orderInCategory="98" app:showAsAction="always" />
    <item android:id="@+id/action_profile" android:title="@string/action_profile" android:icon="@drawable/ic_profile"
        android:orderInCategory="99" app:showAsAction="never" />
    <item android:id="@+id/action_feedback" android:title="@string/action_feedback" android:icon="@drawable/ic_feedback"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings" android:icon="@drawable/ic_settings"
        android:orderInCategory="101" app:showAsAction="never" />
</menu>